--- a/index.html
+++ b/index.html
@@ -236,9 +236,16 @@ Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
 </footer>
 
  <!-- Add your preloader elements here -->
+<div class="preLoader">
+  <img src="images/loading.png">
 
+  </div>
+  
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/template.js"></script>
 <script src="js/index.js"></script>
+
+</div>
 </body>
 </html>
